# systematicStrategies

./: .gitignore  CLAUDE.md  README.md
.claude/: discussion.md
.claude/design/: data_layer_dependency.md  data_models_dependency.md  phase1_complete_dependency_graph.md  phase2_strategy_framework_dependency_graph.md  phase3_backtesting_engine_dependency_graph.md  (+2 more)
backend/: config.py  main.py  pyproject.toml
backend/api/: schemas.py
backend/api/routes/: backtest.py  data.py  hedging.py  pricing.py  risk.py  strategies.py
backend/core/backtester/: __init__.py  costs.py  engine.py  rebalancing.py
backend/core/data/: __init__.py  base.py  csv_loader.py  simulated.py  yahoo.py
backend/core/models/: __init__.py  market_data.py  options.py  portfolio.py  results.py
backend/core/pricing/: __init__.py  black_scholes.py  monte_carlo.py  utils.py
backend/core/risk/: __init__.py  greeks.py  metrics.py  var.py
backend/core/strategies/: __init__.py  base.py  registry.py
backend/core/strategies/allocation/: __init__.py  equal_weight.py  max_sharpe.py  min_variance.py  risk_parity.py
backend/core/strategies/hedging/: __init__.py  delta_gamma_hedge.py  delta_hedge.py
backend/core/strategies/signal/: __init__.py  mean_reversion.py  momentum.py
backend/demos/: phase1_demo.py  phase2_demo.py  phase3_demo.py  phase4_demo.py  phase5_demo.py
backend/tests/: test_api.py  test_backtester.py  test_black_scholes.py  test_monte_carlo.py  test_risk_metrics.py  test_strategies.py
docs/: PRD.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
(+46 files in other folders)
